# rtvi-client-cxx-daily

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDailyPipecat.cmake  FindRTVI.cmake
examples/c++/: CMakeLists.txt  CMakePresets.json  README.md  config.json  vcpkg.json
examples/c++-portaudio/: CMakeLists.txt  README.md  config.json  config_openai_realtime_beta_2024_10.json  config_voice_2024_10.json  vcpkg.json
examples/c++-portaudio/cmake/: FindDailyRTVI.cmake
examples/c++-portaudio/include/: audio_device.h
examples/c++-portaudio/src/: audio_device.cpp  example_audio.cpp
examples/c++/cmake/: FindPipecat.cmake
examples/c++/src/: example.cpp
examples/server/: README.md  env.example  package-lock.json  package.json  server.js
include/: daily_rtvi.h  daily_transport.h  daily_voice_client.h
src/: daily_transport.cpp  daily_voice_client.cpp
